--- a/WebHostLib/templates/hostRoom.html
+++ b/WebHostLib/templates/hostRoom.html
@@ -19,30 +19,34 @@
 {% block body %}
     {% include 'header/grassHeader.html' %}
     <div id="host-room">
-        <span id="host-room-info">
-            {% if room.owner == session["_id"] %}
-                Room created from <a href="{{ url_for("view_seed", seed=room.seed.id) }}">Seed #{{ room.seed.id|suuid }}</a>
-                <br />
-            {% endif %}
-            {% if room.tracker %}
-                This room has a <a href="{{ url_for("get_multiworld_tracker", tracker=room.tracker) }}">Multiworld Tracker</a>
-                and a <a href="{{ url_for("get_multiworld_sphere_tracker", tracker=room.tracker) }}">Sphere Tracker</a> enabled.
-                <br />
-            {% endif %}
-            The server for this room will be paused after {{ room.timeout//60//60 }} hours of inactivity.
-            Should you wish to continue later,
-            anyone can simply refresh this page and the server will resume.<br>
-            {% if room.last_port == -1 %}
-                There was an error hosting this Room. Another attempt will be made on refreshing this page.
-                The most likely failure reason is that the multiworld is too old to be loaded now.
-            {% elif room.last_port %}
-                You can connect to this room by using <span class="interactive"
-                data-tooltip="This means address/ip is {{ config['HOST_ADDRESS'] }} and port is {{ room.last_port }}.">
-                '/connect {{ config['HOST_ADDRESS'] }}:{{ room.last_port }}'
-                </span>
-                in the <a href="{{ url_for("tutorial_landing")}}">client</a>.<br>
-            {% endif %}
-        </span>
+        {% if room.owner == session["_id"] %}
+            Room created from <a href="{{ url_for("view_seed", seed=room.seed.id) }}">Seed #{{ room.seed.id|suuid }}</a>
+            <br />
+        {% endif %}
+        {% if room.tracker %}
+            This room has a <a href="{{ url_for("get_multiworld_tracker", tracker=room.tracker) }}">Multiworld Tracker</a>
+            and a <a href="{{ url_for("get_multiworld_sphere_tracker", tracker=room.tracker) }}">Sphere Tracker</a> enabled.
+            <br />
+        {% endif %}
+        The server for this room will be paused after {{ room.timeout//60//60 }} hours of inactivity.
+        Should you wish to continue later,
+        anyone can simply refresh this page and the server will resume.<br>
+        {% if room.last_port == -1 %}
+            There was an error hosting this Room. Another attempt will be made on refreshing this page.
+            The most likely failure reason is that the multiworld is too old to be loaded now.
+        {% elif room.last_port %}
+            You can connect to this room by using <span class="interactive"
+            data-tooltip="This means address/ip is {{ config['HOST_ADDRESS'] }} and port is {{ room.last_port }}.">
+            '/connect {{ config['HOST_ADDRESS'] }}:{{ room.last_port }}'
+            </span>
+            in the <a href="{{ url_for("tutorial_landing")}}">client</a>.<br>
+        {% endif %}
+        {% if room.tracker_token %}
+            You can connect your tracker using <span class="interactive"
+            data-tooltip="This token can be used to connect to the tracker endpoint.">
+            '{{ room.tracker_token }}'
+            </span>.
+        {% endif %}
         {{ macros.list_patches_room(room) }}
         {% if room.owner == session["_id"] %}
             <div style="display: flex; align-items: center;">
